# weather_cli_widget

./: README.md
weather_cli/: Cargo.toml
weather_cli/src/: main.rs
