[package]
name = "weather_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
